# crunch

./: CMakeLists.txt  README.md  flake.nix
crnlib/: CMakeLists.txt  Makefile  crn_command_line_params.cpp  crn_console.h  crn_dxt_hc.cpp  crn_find_files.cpp  crn_jpge.cpp  crn_mem.cpp  crn_miniz.h  crn_mipmapped_texture.cpp  crn_mipmapped_texture.h  crn_platform.h  crn_ryg_types.hpp  crn_stb_image.cpp  crn_threading_pthreads.cpp  crn_threading_pthreads.h  crn_threading_win32.cpp  crn_timer.cpp  crn_utils.h  crnlib.cpp  lzma_7zBuf.cpp
crunch/: CMakeLists.txt  crunch.cpp
example1/: CMakeLists.txt
example2/: CMakeLists.txt
example3/: CMakeLists.txt
inc/: crn_decomp.h  crnlib.h
